vendor/aosip: overlay: Use GSans on headers and searchbar
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>
Change-Id: I757f542c886aa0d0c18ae707b698b0aa26e1c3a2

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -27,4 +27,10 @@
          it should be disabled in that locale's resources. -->
     <bool name="config_buttonTextAllCaps">false</bool>
 
+    <!-- Google Sans font usage -->
+    <string name="config_headlineFontFamily">google-sans</string>
+    <string name="config_headlineFontFamilyLight">google-sans</string>
+    <string name="config_headlineFontFeatureSettings">ss03</string>
+    <string name="config_headlineFontFamilyMedium">google-sans-medium</string>
+
 </resources>
