themes: Switch telegram style [3/3]
Change-Id: I9fcdbabab7e4bfaef9aa765339bcc7b316bbefd1
Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/darktheme/system/res/values/colors.xml
+++ b/darktheme/system/res/values/colors.xml
@@ -54,4 +54,7 @@
     <color name="notification_default_color_light">@*android:color/theme_text1</color>
     <color name="notification_default_color_dark">@*android:color/theme_text1</color>
 
+    <!-- Extras -->
+    <color name="BottomBarBackground">@*android:color/primary_device_default_dark</color>
+
 </resources>
