themes: Fix suggestion card background in blackaf
Signed-off-by: Harsh Shandilya <msfjarvis@gmail.com>
Change-Id: I8114c9f67009cb61d4b2a681c718b4ec91c65f6d

--- a/blackaf/settings/res/values/colors.xml
+++ b/blackaf/settings/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="bottom_nav_text_icon_inactive">@*android:color/hint_foreground_light</color>
 	
     <color name="condition_card_background">@*android:color/black</color>
+    <color name="suggestion_card_background">@*android:color/black</color>
     <color name="suggestion_condition_background">@*android:color/black</color>
     <color name="suggestion_tile_background">@*android:color/black</color>
     <color name="suggestion_title_text_color">@*android:color/white</color>
