--- a/blackaf/settings/res/values/colors.xml
+++ b/blackaf/settings/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- DU Tweaks -->
+    <color name="BottomBarBackgroundColor">@*android:color/primary_device_default_dark</color>
+    <color name="bottom_nav_text_icon_active">@android:color/white</color>
+    <color name="bottom_nav_text_icon_inactive">@*android:color/hint_foreground_light</color>
+	
     <color name="condition_card_background">@*android:color/black</color>
     <color name="suggestion_condition_background">@*android:color/black</color>
     <color name="suggestion_tile_background">@*android:color/black</color>
