--- a/overlay/common/frameworks/base/core/res/res/values/colors.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/colors.xml
@@ -27,6 +27,22 @@
     <color name="user_icon_7">#ffff9800</color>
     <color name="user_icon_8">#ffff7043</color>
 
+    <color name="system_error">#ffea4335</color>
+    <color name="background_device_default_light">#ffffffff</color>
+    <color name="primary_device_default_dark">#ff2d2d2d</color>
+    <color name="primary_device_default_settings">#ff2d2d2d</color>
+    <color name="primary_device_default_settings_light">#ffffffff</color>
+    <color name="primary_dark_device_default_dark">#ff242424</color>
+    <color name="primary_dark_device_default_settings">#ff202124</color>
+    <color name="primary_dark_device_default_settings_light">#ffffffff</color>
+    <color name="secondary_device_default_settings">#ff3a3a3a</color>
+    <color name="tertiary_device_default_settings">#ff616161</color>
+    <color name="quaternary_device_default_settings">#ff9e9e9e</color>
+    <color name="accent_device_default_light">#ff1a73e8</color>
+    <color name="accent_device_default_dark">#ff8ab4f8</color>
+    <color name="error_color_device_default_dark">#fff28b82</color>
+    <color name="error_color_device_default_light">#ffd93025</color>
+
     <!-- Multi-sim sim colors -->
     <color name="Teal_700">#ff5a9af8</color>
     <color name="Teal_800">#ff5795f0</color>
